--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
 .App-logo {
@@ -35,4 +36,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+.sidemenu-con {
+  height: 55vw;
+  width: 350px;
+  background-color: #d0dcdf;
+}
+
+.sidemenuitem-1 {
+  height: 80px;
+  margin-top: 50px;
+  background-color: transparent;
+  font-size: 30px;
+  color: #000;
+}
+.sidemenuitem {
+  background-color: antiquewhite;
+  box-shadow: 0px 0px 7px #000;
+  width: 99%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  color: black;
 }
